<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="gsihome.reyst.y3t.activities.DetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/scrollview_padding"
        android:fillViewport="false">

        <RelativeLayout
            android:id="@+id/main_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            >

            <TextView

                android:id="@+id/tv_section"
                android:tag="@string/sectionTag"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"

                android:layout_alignParentTop="true"

                android:layout_marginRight="@dimen/scrollview_padding"
                android:layout_marginStart="@dimen/scrollview_padding"

                android:layout_marginEnd="@dimen/scrollview_padding"
                android:layout_marginLeft="@dimen/scrollview_padding"

                android:paddingTop="@dimen/text_part_vertical_padding"
                android:paddingBottom="@dimen/text_part_vertical_padding"

                android:text="@string/str_section_value"
                android:textSize="@dimen/main_text_size"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/tv_status"
                android:tag="@string/statusTag"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_below="@id/tv_section"

                android:layout_marginLeft="@dimen/scrollview_padding"
                android:layout_marginStart="@dimen/scrollview_padding"
                android:layout_marginRight="@dimen/scrollview_padding"
                android:layout_marginEnd="@dimen/scrollview_padding"

                android:paddingLeft="@dimen/status_bg_horizontal_padding"
                android:paddingRight="@dimen/status_bg_horizontal_padding"
                android:paddingTop="@dimen/status_bg_vertical_padding"
                android:paddingBottom="@dimen/status_bg_vertical_padding"

                android:background="@drawable/background_job_status"

                tools:text="@string/str_in_work"
                android:textColor="@color/statusColor"
                android:textSize="@dimen/main_text_size"
                />

            <View
                android:id="@+id/divider1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_thick"
                android:layout_below="@id/tv_status"
                android:layout_marginTop="@dimen/text_part_vertical_padding"
                style="@style/DividerStyle"
                />

            <TextView
                android:id="@+id/tv_created"
                android:tag="@string/createdTag"

                android:layout_height="wrap_content"
                android:layout_width="wrap_content"

                android:layout_below="@id/divider1"
                android:layout_marginLeft="@dimen/scrollview_padding"
                android:layout_marginStart="@dimen/scrollview_padding"
                android:layout_marginTop="@dimen/text_part_vertical_padding"

                android:text="@string/str_created"
                android:textColor="@color/leftTextColor"
                android:textSize="@dimen/main_text_size" />

            <TextView
                android:id="@+id/tv_value_created"
                android:tag="@string/valueCreatedTag"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                tools:text="Other sample text"
                android:textSize="@dimen/main_text_size"

                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"

                android:layout_marginRight="@dimen/scrollview_padding"
                android:layout_marginEnd="@dimen/scrollview_padding"

                android:layout_alignBottom="@id/tv_created"
                />

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_thick"
                android:layout_below="@id/tv_created"
                android:layout_marginTop="@dimen/text_part_vertical_padding"
                style="@style/DividerStyle"
                />

            <TextView
                android:id="@+id/tv_registered"
                android:tag="@string/registeredTag"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_below="@id/divider2"

                android:layout_marginLeft="@dimen/scrollview_padding"
                android:layout_marginStart="@dimen/scrollview_padding"

                android:layout_marginTop="@dimen/text_part_vertical_padding"

                android:text="@string/str_registered"
                android:textColor="@color/leftTextColor"
                android:textSize="@dimen/main_text_size"
                />

            <TextView
                android:id="@+id/tv_value_registered"
                android:tag="@string/valueRegisteredTag"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                tools:text="Other sample text"
                android:textSize="@dimen/main_text_size"

                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"

                android:layout_marginRight="@dimen/scrollview_padding"
                android:layout_marginEnd="@dimen/scrollview_padding"

                android:layout_alignBottom="@id/tv_registered"
                />

            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_thick"
                android:layout_below="@id/tv_registered"
                android:layout_marginTop="@dimen/text_part_vertical_padding"
                style="@style/DividerStyle"
                />

            <TextView
                android:id="@+id/tv_deadline"
                android:tag="@string/deadlineTag"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_below="@id/divider3"

                android:layout_marginLeft="@dimen/scrollview_padding"
                android:layout_marginStart="@dimen/scrollview_padding"

                android:layout_marginTop="@dimen/text_part_vertical_padding"

                android:text="@string/str_deadline"
                android:textColor="@color/leftTextColor"
                android:textSize="@dimen/main_text_size"
                />

            <TextView
                android:id="@+id/tv_value_deadline"
                android:tag="@string/valueDeadlineTag"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                tools:text="Other sample text"
                android:textSize="@dimen/main_text_size"

                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"

                android:layout_marginRight="@dimen/scrollview_padding"
                android:layout_marginEnd="@dimen/scrollview_padding"

                android:layout_alignBottom="@id/tv_deadline"
                />

            <View
                android:id="@+id/divider4"
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_thick"
                android:layout_below="@id/tv_deadline"
                android:layout_marginTop="@dimen/text_part_vertical_padding"
                style="@style/DividerStyle"
                />

            <TextView
                android:id="@+id/tv_responsible"
                android:tag="@string/responsibleTag"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_below="@id/divider4"

                android:layout_marginLeft="@dimen/scrollview_padding"
                android:layout_marginStart="@dimen/scrollview_padding"

                android:layout_marginTop="@dimen/text_part_vertical_padding"

                android:text="@string/str_responsible"
                android:textColor="@color/leftTextColor"
                android:textSize="@dimen/main_text_size"
                />

            <TextView
                android:id="@+id/tv_value_responsible"
                android:tag="@string/valueResponsibleTag"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:textSize="@dimen/main_text_size"

                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"

                android:layout_marginRight="@dimen/scrollview_padding"
                android:layout_marginEnd="@dimen/scrollview_padding"

                android:layout_alignTop="@id/tv_responsible"

                tools:text="QQQQQQQQQQQ QQQQQQQQQQQQQQQQQQ QQQQQQQQQQQ"
                android:layout_toRightOf="@+id/tv_status"
                android:layout_toEndOf="@+id/tv_status"

                android:gravity="end"
                />

            <View
                android:id="@+id/divider5"
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_thick"
                android:layout_below="@id/tv_value_responsible"
                android:layout_marginTop="@dimen/text_part_vertical_padding"
                style="@style/DividerStyle"
                />

            <TextView

                android:id="@+id/tv_description"
                android:tag="@string/descriptionTag"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_below="@id/divider5"

                android:layout_marginLeft="@dimen/scrollview_padding"
                android:layout_marginStart="@dimen/scrollview_padding"
                android:layout_marginRight="@dimen/scrollview_padding"
                android:layout_marginEnd="@dimen/scrollview_padding"

                android:layout_marginTop="@dimen/text_part_vertical_padding"

                android:layout_marginBottom="@dimen/text_part_vertical_padding"

                android:textColor="@color/leftTextColor"
                android:textSize="@dimen/main_text_size"

                />

            <android.support.v7.widget.RecyclerView

                android:id="@+id/rv_images"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_below="@id/tv_description"

                android:layout_marginLeft="@dimen/scrollview_padding"
                android:layout_marginStart="@dimen/scrollview_padding"
                android:layout_marginRight="@dimen/scrollview_padding"
                android:layout_marginEnd="@dimen/scrollview_padding"
                >


            </android.support.v7.widget.RecyclerView>


        </RelativeLayout>

    </ScrollView>

</RelativeLayout>
